added and changed css, index and base templates

--- a/src/Bundle/ChessBundle/Resources/config/routing.yml
+++ b/src/Bundle/ChessBundle/Resources/config/routing.yml
@@ -1,5 +1,11 @@
 BundleChessBundle_homepage:
-    pattern:  /Game
+    pattern:  /
+    defaults: { _controller: BundleChessBundle:Game:index }
+    requirements:
+        _method:  GET
+
+BundleChessBundle_game:
+    pattern:  /game
     defaults: { _controller: BundleChessBundle:Game:index }
     requirements:
         _method:  GET
