--- a/src/Bundle/ChessBundle/Resources/config/routing.yml
+++ b/src/Bundle/ChessBundle/Resources/config/routing.yml
@@ -6,6 +6,6 @@ BundleChessBundle_homepage:
 
 BundleChessBundle_game:
     pattern:  /game
-    defaults: { _controller: BundleChessBundle:Game:index }
+    defaults: { _controller: BundleChessBundle:Game:game }
     requirements:
         _method:  GET
