adding the broken work

--- a/src/Bundle/ChessBundle/Resources/config/routing.yml
+++ b/src/Bundle/ChessBundle/Resources/config/routing.yml
@@ -9,3 +9,9 @@ BundleChessBundle_game:
     defaults: { _controller: BundleChessBundle:Game:game }
     requirements:
         _method:  GET
+        
+BundleChessBundle_move:
+    pattern:  /move/{slug}
+    defaults: { _controller: BundleChessBundle:Game:move}
+    requirements:
+        _method:  GET
