spelarnamn, spelnotation, style, lite av varje

--- a/src/Bundle/ChessBundle/Resources/config/routing.yml
+++ b/src/Bundle/ChessBundle/Resources/config/routing.yml
@@ -9,7 +9,7 @@ BundleChessBundle_game:
     
     defaults: { _controller: BundleChessBundle:Game:game }
     requirements:
-        _method:  GET
+        _method:  GET|POST
         
 BundleChessBundle_move:
     pattern:  /move/{slug}
