med katarina början på multiplayer funtionalitet

--- a/src/Bundle/ChessBundle/Resources/config/routing.yml
+++ b/src/Bundle/ChessBundle/Resources/config/routing.yml
@@ -38,8 +38,8 @@ BundleChessBundle_oldgame:
     requirements:
         _method:  GET
 
-BundleChessBundle_oldgame:
+BundleChessBundle_checkturn:
     pattern:  /checkturn
-    defaults: { _controller: BundleChessBundle:CheckTurn:Checkturn }
+    defaults: { _controller: BundleChessBundle:Turn:checkturn }
     requirements:
         _method:  POST
